# TemporatyIntelIPP_Reproducer01

./: README.md
IPP2021.6.2/: Build.py  CMakeLists.txt
IPP2021.6.2/INTEL_INC/: ippi.h  ipps.h
IPP2021.6.2/INTEL_LIB/: ippcoremt.lib
PerformanceTest_IPP/: CMakeLists.txt
PerformanceTest_IPP/ipp/CurrentIPP/Release/: CurrentIntelIPPSharedLIB.lib
PerformanceTest_IPP/ipp/CurrentIPP/inc/: IPP5.3Wrapper.h
PerformanceTest_IPP/ipp/LatestIPP/Release/: LatestIntelIPPSharedLIB.lib
PerformanceTest_IPP/ipp/LatestIPP/inc/: IPP2021Wrapper.h
PerformanceTest_IPP/ipp/LatestIPP_7/INTEL_INC/: ippcv.h
PerformanceTest_IPP/ipp/LatestIPP_7/Release/: LatestIntelIPPSharedLIB2021.7.lib
PerformanceTest_IPP/ipp/LatestIPP_7/inc/: IPP2021.7Wrapper.h
PerformanceTest_IPP/src/: main.cpp
